--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -4496,6 +4496,10 @@ li.wpcd_dropdown {
     padding:0 0 0 8px !important;
 }
 
+.second-div .coupon-detail{
+    text-align: right;
+}
+
 @media only screen and (max-width: 600px) {
     .wpcd-coupon-nine-header {
         display: inline-flex;
